tests/ui/inline_compile_fail.stderr
error: ERROR
 --> inline_compile_fail.rs:1:13
  |
1 | fn main() { compile_error!("ERROR"); }
  |             ^^^^^^^^^^^^^^^^^^^^^^^^
